--- a/templates/alias.html
+++ b/templates/alias.html
@@ -109,10 +109,10 @@
       <div class="modal-body">
         <uib-accordion>
           <!-- SECTION: Assigned expressions -->
-          <div uib-accordion-group is-open="statusExpressions.open">
+          <div uib-accordion-group is-open="expressionSection.open">
             <uib-accordion-heading>
               <div>
-                <strong>Assigned Clinical {{alias.type}} Code(s)</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusExpressions.open, 'glyphicon-chevron-right': !statusExpressions.open}"></i>
+                <strong>Assigned Clinical {{alias.type}} Code(s)</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': expressionSection.open, 'glyphicon-chevron-right': !expressionSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="alert alert-info" role="alert">
@@ -151,10 +151,10 @@
             </div>
           </div>
           <!-- SECTION: Title -->
-          <div uib-accordion-group is-open="statusTitle.open">
+          <div uib-accordion-group is-open="titleSection.open">
             <uib-accordion-heading>
               <div>
-                <strong>Titles</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusTitle.open, 'glyphicon-chevron-right': !statusTitle.open}"></i>
+                <strong>Titles</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': titleSection.open, 'glyphicon-chevron-right': !titleSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="row">
@@ -173,10 +173,10 @@
             </div>
           </div>
           <!-- SECTION: Description -->
-          <div uib-accordion-group is-open="statusDescription.open">
+          <div uib-accordion-group is-open="descriptionSection.open">
             <uib-accordion-heading>
               <div>
-                <strong>Plain-Text Descriptions</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusDescription.open, 'glyphicon-chevron-right': !statusDescription.open}"></i>
+                <strong>Plain-Text Descriptions</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': descriptionSection.open, 'glyphicon-chevron-right': !descriptionSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="row">
@@ -195,10 +195,10 @@
             </div>
           </div>
           <!-- SECTION: Educational material -->
-          <div uib-accordion-group is-open="statusEducationalMaterial.open">
+          <div uib-accordion-group is-open="educationalMaterialSection.open">
             <uib-accordion-heading>
               <div>
-                <strong>Attached Educational Material</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusEducationalMaterial.open, 'glyphicon-chevron-right': !statusEducationalMaterial.open}"></i>
+                <strong>Attached Educational Material</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': educationalMaterialSection.open, 'glyphicon-chevron-right': !educationalMaterialSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="alert alert-info" role="alert">
@@ -224,10 +224,10 @@
             </div>
           </div>
           <!-- SECTION: Color tag -->
-          <div uib-accordion-group is-open="statusColorTag.open">
+          <div uib-accordion-group is-open="colorSection.open">
             <uib-accordion-heading>
               <div>
-                <strong>Color Tag</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusColorTag.open, 'glyphicon-chevron-right': !statusColorTag.open}"></i>
+                <strong>Color Tag</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': colorSection.open, 'glyphicon-chevron-right': !colorSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="row" style="padding-top: 15px;">
